--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
     <title>Github Tutorial</title>
   </head>
   <body>
-
-    <!-- As a heading -->
-<nav class="navbar bg-light">
-  <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
-  </div>
-</nav>
+    <nav class="navbar sticky-top navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            src="pic.png"
+            alt="Logo"
+            width="30"
+            height="24"
+            class="d-inline-block align-text-top"
+          />
+          <div class="d-flex justify-content-center">GitHub Tutorial</div>
+        </a>
+      </div>
+    </nav>
   </body>
 </html>
