Trying some changes in index file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     ></script>
     <title>Github Tutorial</title>
   </head>
+  <!-------------------------------- BODY i s starting ------------------------------------->
   <body>
     <nav class="navbar sticky-top navbar-dark bg-dark">
       <div class="container-fluid">
@@ -32,5 +33,14 @@
         </a>
       </div>
     </nav>
+    <h1 class="text-center">Welcome to GitHub Tutorial</h1>
+    <figure class="text-center">
+      <blockquote class="blockquote">
+        <p>So we will learn how to use git and github as a beginner.</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        <cite title="Source Title">Let's Get Started</cite>
+      </figcaption>
+    </figure>
   </body>
 </html>
