Added difference between git & github.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     ></script>
     <title>Github Tutorial</title>
   </head>
-  <!-------------------------------- BODY i s starting ------------------------------------->
+  <!-------------------------------- BODY is starting ------------------------------------->
   <body>
+    <!-------------------------------- Navbar is starting ------------------------------------->
     <nav class="navbar sticky-top navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -33,6 +34,7 @@
         </a>
       </div>
     </nav>
+    <!-------------------------------- Navbar Ending ------------------------------------->
     <h1 class="text-center">Welcome to GitHub Tutorial</h1>
     <figure class="text-center">
       <blockquote class="blockquote">
@@ -42,5 +44,17 @@
         <cite title="Source Title">Let's Get Started</cite>
       </figcaption>
     </figure>
+    <h3 class>Difference Between Git & Github</h3>
+    <p class="ml-4">Let's start with Difference between these two terms.</p>
+    <ul>
+      <li class="ml-4">
+        Git is a version control system that lets you manage and keep track of
+        your source code history
+      </li>
+      <li class="ml-4">
+        GitHub is a cloud-based hosting service that lets you manage Git
+        repositories
+      </li>
+    </ul>
   </body>
 </html>
