Added new bash for guidance

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       </div>
     </nav>
     <!-------------------------------- Navbar Ending ------------------------------------->
+
+    <!-------------------------------- Text is starting ------------------------------------->
     <h1 class="text-center">Welcome to GitHub Tutorial</h1>
     <figure class="text-center">
       <blockquote class="blockquote">
@@ -44,7 +46,7 @@
         <cite title="Source Title">Let's Get Started</cite>
       </figcaption>
     </figure>
-    <h3 class>Difference Between Git & Github</h3>
+    <h4 class>Difference Between Git & Github</h4>
     <p class="ml-4">Let's start with Difference between these two terms.</p>
     <ul>
       <li class="ml-4">
@@ -56,5 +58,32 @@
         repositories
       </li>
     </ul>
+    <p>
+      First of all, you need to install
+      <a href="https://git-scm.com/downloads" target="_blank">Git</a> on your
+      system which allows you to run linux commands on your system unless you
+      are using Linux.
+    </p>
+    <p>Git allows you keep track of files you are adding.</p>
+
+    <h4 class>Using Git</h4>
+    <p>
+      After you have successfully install Git, create a folder anywhere on your
+      pc. If you right click, you will notice that now you have two new options
+      there.
+    </p>
+    <p>
+      <ul>
+      <li>Git Bash here & Git GUI here</li>
+      </ul>
+    </p>
+    <img src="bash.png" class="rounded float-left" alt="Bash Photo">
+    <p>
+      Now Click on it and you can run command <b>$-git version</b> to check version of git
+      you have  downloaded.
+    </p>
+    <p>
+      
+    </p>
   </body>
 </html>
