added git local user

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
     <!-------------------------------- Navbar Ending ------------------------------------->
 
-    <!-------------------------------- Text is starting ------------------------------------->
+    <!-------------------------------- Git Differnce heading is starting ------------------->
     <h1 class="text-center">Welcome to GitHub Tutorial</h1>
     <figure class="text-center">
       <blockquote class="blockquote">
@@ -65,7 +65,9 @@
       are using Linux.
     </p>
     <p>Git allows you keep track of files you are adding.</p>
+  <!------------------------ Git Differnce heading ENDED ----------------------------->
 
+  <!-------------------------------- Using Git heading is starting ------------------->
     <h4 class>Using Git</h4>
     <p>
       After you have successfully install Git, create a folder anywhere on your
@@ -78,12 +80,27 @@
       </ul>
     </p>
     <img src="bash.png" class="rounded float-left" alt="Bash Photo">
+    <p>Now click on it it will look like this</p>
+    <img src="git-terminal.png" class="rounded float-left" alt="Terminal Photo">
     <p>
-      Now Click on it and you can run command <b>$-git version</b> to check version of git
+      You can run command <b>git version</b> to check version of git
       you have  downloaded.
     </p>
     <p>
-      
+      Now if you run the command <b>git init</b>. This will initialize your folder as a git 
+      repositry. Once you have initialized your repositry, you can add some files as a start.
+    </p>
+    <p>
+      Now run the command <b>git status</b> after adding some files, you will notice that 
+      it will show some red lines.Like this 
+    </p>
+    <img src="git-add.png" class="rounded float-left" alt="Bash Photo">
+    <p>
+      Basically how it all it all works can be described in one photo.
+    </p>
+    <img src="git-workflow.png" class="rounded float-left" alt="Bash Photo">
+    <p>
+      First when we make some changes you need 
     </p>
   </body>
 </html>
