starting github part

--- a/index.html
+++ b/index.html
@@ -116,5 +116,13 @@
       Now finally run the command <b>git commit -m "some useful message"</b> to commit your
       changes.
     </p>
+    <p>You have to attach some message to it, so that after some time, you or someone 
+    else is looking at the code, it is well documented and any programmer can understand
+    any changes. 
+    </p>
+    <h4 class>GitHub Setup</h4>
+    <p>
+      Now you need to make a github Account for storing your repo online.
+    </p>
   </body> 
 </html>
