--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
     <p>
       Now you need to make a github Account for storing your repo online.
     </p>
-  <p>making some changes</p>
+    <p>MAke some changes</p>
   </body> 
 </html>
