starting github tutorial

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
       it will show some red lines.Like this 
     </p>
     <div class="text-center">
-      <img src="/static/git-add.png" class="rounded float-left" alt="Bash Photo">
+      <img src="/static/git-add.png" class="rounded float-left" alt="Git Add">
     </div>
     <p>
       Basically how it all it all works can be described in one photo.
     </p>
     <div class="text-center">
-    <img src="/static/git-workflow.png" class="rounded float-left" alt="Bash Photo">
+    <img src="/static/git-workflow.png" class="rounded float-left" alt="Git Workflow">
     </div>
     <p>
       First when we make some changes(added some file or anything), git will realize that you have
@@ -114,16 +114,26 @@
     name incase of "." in which you have made changes.</p>
     <p>
       Now finally run the command <b>git commit -m "some useful message"</b> to commit your
-      changes.
+      changes. 
     </p>
     <p>You have to attach some message to it, so that after some time, you or someone 
     else is looking at the code, it is well documented and any programmer can understand
-    any changes. 
+    any changes. Forexample, here is how I did it:
     </p>
+    <img src="/static/git-commit.png" class="rounded float-left" alt="Commit Photo">
+    
     <h4 class>GitHub Setup</h4>
     <p>
       Now you need to make a github Account for storing your repo online.
     </p>
-    <p>MAke some changes</p>
+    <p> You are going to need an email for making an account on <a href="https://github.com/" target="_blank">GitHub</a>,
+    if it's your first time on Github, you will need to connect your system with your account with SSH Keys. </p>
+    <p>Now after all that, you will be directed to main page of GitHub</p>
+    <div class="text-center">
+    <img src="/static/github_main.png" class="rounded float-left" alt="GitHub">
+    </div>
+    <p>Now if you look at your left side of browser, you will see an option with 
+    create a new repositry. CLilk on that option to create a new repositry.
+    </p>
   </body> 
 </html>
