commiting to github

--- a/index.html
+++ b/index.html
@@ -135,5 +135,22 @@
     <p>Now if you look at your left side of browser, you will see an option with 
     create a new repositry. CLilk on that option to create a new repositry.
     </p>
+    <img src="/static/Github-newrepo.png" class="rounded float-left" alt="GitHub New Repo">
+    <p>
+      Now you can name your repo, you can further write description about it, which tells more
+      about your project. Also it asks you keep your repo private or public. 
+    </p>
+    <p>
+      What it means it by keeping it private, only you can access it, but by keeping it public, 
+      everyone can access it.  By adding README file, you can add details about your project.
+      Now Clicking on create repositry will create your repositry,
+    </p>
+    <div class="text-center">
+    <img src="/static/git-intro-page.png" class="rounded float-left" alt="GitHb Repo Page">
+    </div>
+    <p>
+      You can see all the details to how to connect local repo to your this online repo.  
+      Now click on the SSH option and copy 
+    </p>
   </body> 
 </html>
