github intro completed

--- a/index.html
+++ b/index.html
@@ -150,7 +150,28 @@
     </div>
     <p>
       You can see all the details to how to connect local repo to your this online repo.  
-      Now click on the SSH option and copy 
+      Now click on the SSH option and copy the code and run in your git local folder.
+    </p>
+    <img src="/static/github-remote.png" class="rounded float-left" alt="GitHb Remote">
+    <p> In this case remote already existing that's why it is giving error. Next run the 
+    git branch command to make a branch on your local repo and then push the code to your GitHub 
+    Repo.
+    </p>
+    <div class="text-center">
+        <img src="/static/github-push.png" class="rounded float-left" alt="GitHub PUsh">
+    </div>
+    <p>
+      Running these two commands will push your code to your Github Repo.
+    </p>
+    <img src="/static/file-added.png" class="rounded float-left" alt="GitHb File Uploaded">
+    <p>
+      You can see that file has been uplaoded on your Github Repo. You can make changes there 
+      and make commits there, and git will keep the records of it. 
+    </p>
+    <p>
+      Now run the <b>Pull</b> command to pull the command from that github repo you have just 
+      created. THis will copy the code into the same folder with the changes you have made 
+      on the github on the project.
     </p>
   </body> 
 </html>
