changes made in ali branch

--- a/index.html
+++ b/index.html
@@ -173,5 +173,23 @@
       created. THis will copy the code into the same folder with the changes you have made 
       on the github on the project.
     </p>
-  </body> 
+    <p> 
+      By following the given guidline, you can make your own account and push and pull changes on 
+    github and local repo. YOu can also run the command <b> git log</b> to see the history of 
+    all commits made so far. 
+    </p>
+    <img src="/static/git-log.png" class="rounded float-left" alt="Git Log">
+  <h4> Branches </h4>
+  <p>
+    A branch represents an independent line of development. Branches serve as an abstraction for the edit/stage/commit process. You can think of them as a way to request a brand new working directory, staging area, and project history. New commits are recorded in the history for the current branch, which results in a fork in the history of the project.
+  </p>
+  <p>
+    To create a new branch run the following command.
+  </p>
+  <img src="/static/git-branch.png" class="rounded float-left" alt="Git Branch">
+  <p>
+    By running these commands, you can create a new branch, do some work there and later on make some changes in it and then commit 
+    them. WHen you are done you can merge it into the master branch. 
+  </p>  
+</body>
 </html>
