--- a/index.html
+++ b/index.html
@@ -191,5 +191,16 @@
     By running these commands, you can create a new branch, do some work there and later on make some changes in it and then commit 
     them. WHen you are done you can merge it into the master branch. 
   </p>  
+  <img src="/static/git-merge.bmp" class="rounded float-left" alt="Git Merge">
+
+  <h1 class="text-center">This is it.</h1>
+    <figure class="text-center">
+      <blockquote class="blockquote">
+        <p>Hope you learn new things and know how to apply them.</p>
+      </blockquote>
+      <figcaption class="blockquote-footer">
+        <cite title="Source Title">Don't be Afraid, Keep trying new things to Learn.</cite>
+      </figcaption>
+    </figure>
 </body>
 </html>
